# examnotificator

./: README.md  pyproject.toml
docs/: plugins.md
examnotificator/: __main__.py  cli.py  config.py  main.py  model.py  plugin.py  repo.py  use_cases.py
examnotificator/fetching/: builtin.py  common.py
examnotificator/notification/: builtin.py  common.py  formatters.py  strategies.py
test/: test_notification_strategies.py  test_repo.py  test_use_cases.py
